--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,17 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - image/qq.png
-    - image/qqc.png
     - image/qqo.png
+    - image/qqc.png
+    - image/canceo.png
+    - image/cancet.png
+    - image/jisuanqi.png
+    - image/shutdow.png
+    - image/shutdownt.png
+    - image/suoping.png
+    - image/task.png
+    - image/wechat.png
+    - image/wechatt.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
