--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   fluttertoast: ^2.1.1
   flutter_swiper: ^1.1.6
+  dio: ^2.1.16
 
 dev_dependencies:
   flutter_test:
